--- a/google/styles.css
+++ b/google/styles.css
@@ -4,6 +4,7 @@
     padding: 0;
     /* border: 1px solid red; */
     font-family: 'Roboto', sans-serif;
+    color: rgb(81, 81, 81);
     font-size: 15px;
     font-weight: bold;
 }
@@ -68,6 +69,10 @@ body {
     width: 33vw;
 }
 
+.bar:hover {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
 .bar {
     justify-content: space-between;
     min-width: 50vw;
@@ -75,6 +80,17 @@ body {
     border: 1px solid rgb(234, 234, 234);
     border-radius: 50px;
     margin-top: 25px;
+}
+
+.input input {
+    width: calc(50vw - (40px));
+    height: 4.8vh;
+    border: none;
+    font-size: 16px;
+}
+
+.input input:focus {
+    outline: none;
 }
 
 .bar img, .bar svg {
