finished the nav bar

--- a/medium/styles.css
+++ b/medium/styles.css
@@ -15,9 +15,13 @@ a {
 
 body {
     display: flex;
+    flex-direction: column;
     width: 100%;
     height: 100%;
-    /* border: 1px solid blue; */
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+
 }
 /* -------------------------------------- */
 /* Navigation bar section */
@@ -25,8 +29,10 @@ body {
 .nav {
     /* border: 1px solid greenyellow; */
     display: flex;
+    flex-direction: row;
     justify-content: flex-end;
     width: 100%;
+    margin-top: 20px;
 }
 
 .logo {
@@ -37,6 +43,15 @@ body {
 .logo img {
     width: 30px;
     height: auto;
+    position: relative;
+    left: 125px;
+}
+
+.otherNav {
+    width: 250px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 /* The first a in the otherNav div */
@@ -45,5 +60,16 @@ body {
 }
 
 .otherNav a:nth-child(2) {
-    color: rgb(79, 150, 88);
+    color: rgb(90, 170, 110);
+}
+
+.otherNav a:nth-child(3) {
+    margin-top: 3px;
+}
+
+/* Author section */
+.author {
+    border: 2px solid red;
+    display: flex;
+    flex-direction: row;
 }
