added some color

--- a/medium/styles.css
+++ b/medium/styles.css
@@ -70,7 +70,7 @@ body {
 /* Author section */
 .author {
     margin: 40px 0;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     display: flex;
     flex-direction: row;
     width: 75%
@@ -87,6 +87,16 @@ body {
     color: rgb(160, 160, 160);
     font-size: 14px;
 }
+
+.follow {
+    color: rgb(90, 170, 110);
+    border: 1px solid rgb(90, 170, 110);
+    font-size: 10px;
+    padding: 1px 10px;
+    border-radius: 15px;
+    width: 50px;
+}
+
 .author div {
     margin-left: 5px;
 }
@@ -101,4 +111,7 @@ body {
 
 span {
     border: 1px solid red;
+    height: 2px;
+    position: relative;
+
 }
